# mp2-lab5-multistack

./: .travis.yml  CMakeLists.txt  README.md
MultiStack/: CMakeLists.txt  multistack.cpp  multistack.h
StackLib/: CMakeLists.txt  stack.cpp  stack.h
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_TMultiStack.cpp  test_TStack.cpp  test_main.cpp
